<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/radius_20_white_bg">
    <FrameLayout
        android:id="@+id/flt_top_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >
        <com.aiven.updateapp.ui.widget.RoundImageView
            android:id="@+id/img_top_bg"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/app_update_bg"
            android:scaleType="centerCrop"
            android:topLeftRadius="20dp"
            android:topRightRadius="20dp"
            />
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/rlt_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/flt_top_bg"
        >

        <TextView
            android:id="@+id/tv_app_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="安装包大小：10Mb"
            android:textColor="@color/version_title"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="v1.0.2"
            android:textSize="20dp"
            android:textColor="@color/version_title"
            android:layout_alignStart="@id/tv_app_size"
            android:layout_below="@id/tv_app_size"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tv_version_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_desc_title"
            android:textColor="@color/version_title"
            android:layout_toEndOf="@id/tv_version"
            android:layout_alignTop="@id/tv_version"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_version_desc_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_version_desc_title"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:maxHeight="200dp"
            android:scrollbars="vertical"
            android:text="修复了已知问题"
            android:textColor="@color/version_desc"
            android:textSize="14dp" />

        <com.aiven.updateapp.ui.widget.ProgressButton
            android:id="@+id/progress_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/tv_version_desc_content"
            android:layout_marginTop="20dp"
            android:radius="30dp"
            android:textSize="18dp"
            app:backgroundColor="@color/default_progress_color_bg"
            app:doneText="@string/click_to_install_download"
            app:failedProgressColor="@color/default_failed_progress_color"
            app:failedText="@string/try_again_download"
            app:failedTextColor="@color/default_failed_text_color"
            app:normalTextColor="@color/white"
            app:pauseText="@string/go_on_download"
            app:progressColor="@color/default_progress_color"
            app:startText="@string/update_now" />
        <TextView
            android:id="@+id/tv_update_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_after"
            android:layout_below="@id/progress_btn"
            android:textSize="14dp"
            android:textColor="@color/version_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            />
    </RelativeLayout>
    <View
        android:id="@+id/view_bottom_space"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/rlt_body"
        />
</RelativeLayout>